QtBeef/src/Qt/qgraphicsview.bf

	[LinkName("QGraphicsView_DragEnterEvent")]
	public static extern void QGraphicsView_DragEnterEvent(QGraphicsView_Ptr* self, QDragEnterEvent_Ptr* event);
	[LinkName("QGraphicsView_DragLeaveEvent")]
	public static extern void QGraphicsView_DragLeaveEvent(QGraphicsView_Ptr* self, QDragLeaveEvent_Ptr* event);
	[LinkName("QGraphicsView_DragMoveEvent")]
	public static extern void QGraphicsView_DragMoveEvent(QGraphicsView_Ptr* self, QDragMoveEvent_Ptr* event);
	[LinkName("QGraphicsView_DropEvent")]
	public static extern void QGraphicsView_DropEvent(QGraphicsView_Ptr* self, QDropEvent_Ptr* event);
	[LinkName("QGraphicsView_FocusInEvent")]
	public static extern void QGraphicsView_FocusInEvent(QGraphicsView_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QGraphicsView_FocusNextPrevChild")]
	public static extern bool QGraphicsView_FocusNextPrevChild(QGraphicsView_Ptr* self, bool next);
	[LinkName("QGraphicsView_FocusOutEvent")]
	public static extern void QGraphicsView_FocusOutEvent(QGraphicsView_Ptr* self, QFocusEvent_Ptr* event);
	[LinkName("QGraphicsView_KeyPressEvent")]
	public static extern void QGraphicsView_KeyPressEvent(QGraphicsView_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QGraphicsView_KeyReleaseEvent")]
	public static extern void QGraphicsView_KeyReleaseEvent(QGraphicsView_Ptr* self, QKeyEvent_Ptr* event);
	[LinkName("QGraphicsView_MouseDoubleClickEvent")]
	public static extern void QGraphicsView_MouseDoubleClickEvent(QGraphicsView_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QGraphicsView_MousePressEvent")]
	public static extern void QGraphicsView_MousePressEvent(QGraphicsView_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QGraphicsView_MouseMoveEvent")]
	public static extern void QGraphicsView_MouseMoveEvent(QGraphicsView_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QGraphicsView_MouseReleaseEvent")]
	public static extern void QGraphicsView_MouseReleaseEvent(QGraphicsView_Ptr* self, QMouseEvent_Ptr* event);
	[LinkName("QGraphicsView_WheelEvent")]
	public static extern void QGraphicsView_WheelEvent(QGraphicsView_Ptr* self, QWheelEvent_Ptr* event);
	[LinkName("QGraphicsView_PaintEvent")]
	public static extern void QGraphicsView_PaintEvent(QGraphicsView_Ptr* self, QPaintEvent_Ptr* event);
	[LinkName("QGraphicsView_ResizeEvent")]
	public static extern void QGraphicsView_ResizeEvent(QGraphicsView_Ptr* self, QResizeEvent_Ptr* event);
	[LinkName("QGraphicsView_ScrollContentsBy")]
	public static extern void QGraphicsView_ScrollContentsBy(QGraphicsView_Ptr* self, c_int dx, c_int dy);
	[LinkName("QGraphicsView_ShowEvent")]
	public static extern void QGraphicsView_ShowEvent(QGraphicsView_Ptr* self, QShowEvent_Ptr* event);
	[LinkName("QGraphicsView_InputMethodEvent")]
	public static extern void QGraphicsView_InputMethodEvent(QGraphicsView_Ptr* self, QInputMethodEvent_Ptr* event);
	[LinkName("QGraphicsView_DrawBackground")]
	public static extern void QGraphicsView_DrawBackground(QGraphicsView_Ptr* self, QPainter_Ptr* painter, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_DrawForeground")]
	public static extern void QGraphicsView_DrawForeground(QGraphicsView_Ptr* self, QPainter_Ptr* painter, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_DrawItems")]
	public static extern void QGraphicsView_DrawItems(QGraphicsView_Ptr* self, QPainter_Ptr* painter, c_int numItems, QGraphicsItem_Ptr** items, QStyleOptionGraphicsItem_Ptr* options);
	[LinkName("QGraphicsView_Tr2")]
	public static extern libqt_string QGraphicsView_Tr2(c_char* s, c_char* c);
	[LinkName("QGraphicsView_Tr3")]
	public static extern libqt_string QGraphicsView_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QGraphicsView_SetRenderHint2")]
	public static extern void QGraphicsView_SetRenderHint2(QGraphicsView_Ptr* self, QPainter_RenderHint hint, bool enabled);
	[LinkName("QGraphicsView_SetOptimizationFlag2")]
	public static extern void QGraphicsView_SetOptimizationFlag2(QGraphicsView_Ptr* self, QGraphicsView_OptimizationFlag flag, bool enabled);
	[LinkName("QGraphicsView_SetTransform2")]
	public static extern void QGraphicsView_SetTransform2(QGraphicsView_Ptr* self, QTransform_Ptr* matrix, bool combine);
	[LinkName("QGraphicsView_EnsureVisible22")]
	public static extern void QGraphicsView_EnsureVisible22(QGraphicsView_Ptr* self, QRectF_Ptr* rect, c_int xmargin);
	[LinkName("QGraphicsView_EnsureVisible32")]
	public static extern void QGraphicsView_EnsureVisible32(QGraphicsView_Ptr* self, QRectF_Ptr* rect, c_int xmargin, c_int ymargin);
	[LinkName("QGraphicsView_EnsureVisible5")]
	public static extern void QGraphicsView_EnsureVisible5(QGraphicsView_Ptr* self, double x, double y, double w, double h, c_int xmargin);
	[LinkName("QGraphicsView_EnsureVisible6")]
	public static extern void QGraphicsView_EnsureVisible6(QGraphicsView_Ptr* self, double x, double y, double w, double h, c_int xmargin, c_int ymargin);
	[LinkName("QGraphicsView_EnsureVisible23")]
	public static extern void QGraphicsView_EnsureVisible23(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item, c_int xmargin);
	[LinkName("QGraphicsView_EnsureVisible33")]
	public static extern void QGraphicsView_EnsureVisible33(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item, c_int xmargin, c_int ymargin);
	[LinkName("QGraphicsView_FitInView22")]
	public static extern void QGraphicsView_FitInView22(QGraphicsView_Ptr* self, QRectF_Ptr* rect, Qt_AspectRatioMode aspectRadioMode);
	[LinkName("QGraphicsView_FitInView5")]
	public static extern void QGraphicsView_FitInView5(QGraphicsView_Ptr* self, double x, double y, double w, double h, Qt_AspectRatioMode aspectRadioMode);
	[LinkName("QGraphicsView_FitInView23")]
	public static extern void QGraphicsView_FitInView23(QGraphicsView_Ptr* self, QGraphicsItem_Ptr* item, Qt_AspectRatioMode aspectRadioMode);
	[LinkName("QGraphicsView_Render2")]
	public static extern void QGraphicsView_Render2(QGraphicsView_Ptr* self, QPainter_Ptr* painter, QRectF_Ptr* target);
	[LinkName("QGraphicsView_Render3")]
	public static extern void QGraphicsView_Render3(QGraphicsView_Ptr* self, QPainter_Ptr* painter, QRectF_Ptr* target, QRect_Ptr* source);
	[LinkName("QGraphicsView_Render4")]
	public static extern void QGraphicsView_Render4(QGraphicsView_Ptr* self, QPainter_Ptr* painter, QRectF_Ptr* target, QRect_Ptr* source, Qt_AspectRatioMode aspectRatioMode);
	[LinkName("QGraphicsView_Items22")]
	public static extern void* QGraphicsView_Items22(QGraphicsView_Ptr* self, QRect_Ptr* rect, Qt_ItemSelectionMode mode);
	[LinkName("QGraphicsView_Items52")]
	public static extern void* QGraphicsView_Items52(QGraphicsView_Ptr* self, c_int x, c_int y, c_int w, c_int h, Qt_ItemSelectionMode mode);
	[LinkName("QGraphicsView_Items24")]
	public static extern void* QGraphicsView_Items24(QGraphicsView_Ptr* self, QPainterPath_Ptr* path, Qt_ItemSelectionMode mode);
	[LinkName("QGraphicsView_InvalidateScene1")]
	public static extern void QGraphicsView_InvalidateScene1(QGraphicsView_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QGraphicsView_InvalidateScene2")]
	public static extern void QGraphicsView_InvalidateScene2(QGraphicsView_Ptr* self, QRectF_Ptr* rect, void* layers);
}
